--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@storybook/react": "^7.6.14",
     "@storybook/react-vite": "^7.6.14",
     "@storybook/test": "^7.6.14",
+    "@svgr/rollup": "^8.1.0",
     "@types/react": "^18.2.55",
+    "axios": "^1.6.7",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -25,18 +27,18 @@
     "react-router-dom": "^6.22.0",
     "rollup": "^4.10.0",
     "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-image": "^1.0.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^7.6.14",
-    "typescript": "^5.3.3",
-    "axios": "^1.6.7"
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
-    "react-router-dom": "^6.22.0",
-    "axios": "^1.6.7"
+    "react-router-dom": "^6.22.0"
   },
   "scripts": {
     "storybook": "storybook dev -p 6006",
