--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
       "resolveJsonModule": true,
       "isolatedModules": true,
       "noEmit": true,
-      "jsx": "react",
-      "types": ["node"]
+      "jsx": "react"
     },
     "include": ["src",
       "additional.d.ts"
